# Slay-the-Spire-2-Simulator

./: .gitignore  Cargo.toml  README.md
crates/sts2-sim/: Cargo.toml
crates/sts2-sim-oracle-tests/: Cargo.toml
crates/sts2-sim-oracle-tests/src/: lib.rs  rust_rig.rs
crates/sts2-sim-oracle-tests/tests/: act.rs  audit_skipped_and_loose.rs  choice_vs_rng.rs  combat_parity.rs  combat_parity_sweep.rs  combat_scaffold.rs  composition_architecture.rs  debug_run.rs  diagnose_replay.rs  enchantment_audit.rs  hash.rs  mad_science_variants.rs  potion_audit.rs  relic_parity_sweep.rs  reward_offer_audit.rs  rng.rs  rng_set.rs  run_log_corpus.rs  run_state_corpus.rs  shuffle.rs  smoke.rs  standard_act_map.rs
crates/sts2-sim-py/: Cargo.toml  README.md  pyproject.toml
crates/sts2-sim-py/src/: lib.rs
crates/sts2-sim-ui/: Cargo.toml
crates/sts2-sim-ui/src/: main.rs
crates/sts2-sim/benches/: combat_perf.rs
crates/sts2-sim/data/: afflictions.json  cards.json  characters.json  enchantments.json  encounters.json  events.json  modifiers.json  monsters.json  orbs.json  potions.json  powers.json  relics.json
crates/sts2-sim/src/: act.rs  affliction.rs  ascension.rs  campfire.rs  card.rs  card_reward.rs  character.rs  combat.rs  effects.rs  enchantment.rs  encounter.rs  env.rs  event.rs  event_room.rs  features.rs  hash.rs  lib.rs  map.rs  map_post_processing.rs  modifier.rs  monster.rs  monster_ai.rs  monster_dispatch.rs  orb.rs  path_align.rs  path_pruning.rs  potion.rs  power.rs  relic.rs  rng.rs  rng_set.rs  room_set.rs  run_flow.rs  run_log.rs  run_state.rs  shop.rs  shuffle.rs  standard_act_map.rs  treasure.rs  unknown_room.rs
crates/sts2-sim/tests/: game_flow.rs  mapgen_dump.js  mapgen_parity.rs  mapgen_reference.json
docs/: effect-vocabulary.md  rng_streams.md
oracle-host/: OracleHost.csproj  Program.cs
tools/: audit_coverage.py  coverage_audit.txt
tools/combat_smoke/: README.md  random_policy.py
tools/extract_afflictions/: Cargo.toml
tools/extract_afflictions/src/: main.rs
tools/extract_cards/: Cargo.toml
tools/extract_cards/src/: main.rs
tools/extract_characters/: Cargo.toml
tools/extract_characters/src/: main.rs
tools/extract_enchantments/: Cargo.toml
tools/extract_enchantments/src/: main.rs
tools/extract_encounters/: Cargo.toml
tools/extract_encounters/src/: main.rs
tools/extract_events/: Cargo.toml
tools/extract_events/src/: main.rs
tools/extract_modifiers/: Cargo.toml
tools/extract_modifiers/src/: main.rs
tools/extract_monsters/: Cargo.toml
tools/extract_monsters/src/: main.rs
tools/extract_orbs/: Cargo.toml
tools/extract_orbs/src/: main.rs
tools/extract_potions/: Cargo.toml
tools/extract_potions/src/: main.rs
tools/extract_powers/: Cargo.toml
tools/extract_powers/src/: main.rs
tools/extract_relics/: Cargo.toml
tools/extract_relics/src/: main.rs
tools/extractors_common/: Cargo.toml
tools/extractors_common/src/: lib.rs
tools/merge_card_ports/: autogen.py  autogen_out.rs  autogen_out.stats  batch_v10.txt  batch_v11.txt  batch_v12.txt  batch_v13.txt  batch_v14.txt  batch_v15.txt  batch_v2_1.txt  batch_v2_2.txt  batch_v2_3.txt  batch_v2_4.txt  batch_v3.txt  batch_v4.txt  batch_v5.txt  batch_v6.txt  batch_v7.txt  batch_v8.txt  batch_v9.txt  inject.py  inject_v2.py  merge.py  unported_v2.txt
tools/merge_potion_ports/: batch_p_1.txt  batch_p_2.txt  batch_p_3.txt  inject_potions.py
tools/merge_relic_ports/: TRIAGE_REPORT.md  batch_m_1.txt  batch_r_1.txt  batch_r_10.txt  batch_r_2.txt  batch_r_3.txt  batch_r_4.txt  batch_r_5.txt  batch_r_6.txt  batch_r_7.txt  batch_r_8.txt  batch_r_9.txt  batch_r_cosmetic.txt  batch_r_rs_1.txt  batch_r_rs_2.txt  batch_r_rs_3.txt  batch_r_rs_4.txt  batch_r_rs_5.txt  batch_r_rs_6.txt  batch_r_rs_7.txt  inject_monsters.py  inject_relics.py  inject_run_state.py
tools/run_analyzer/: Cargo.toml
tools/run_analyzer/src/: main.rs
tools/run_analyzer/tests/: corpus_summary.rs
tools/run_replay/: README.md  coverage.py  replay.py
