[workspace]
resolver = "2"
members = [
    "crates/sts2-sim",
    "crates/sts2-sim-oracle-tests",
    "tools/extract_afflictions",
    "tools/extract_cards",
    "tools/extract_characters",
    "tools/extract_enchantments",
    "tools/extract_encounters",
    "tools/extract_events",
    "tools/extract_modifiers",
    "tools/extract_orbs",
    "tools/extract_potions",
    "tools/extract_powers",
    "tools/extract_relics",
    "tools/extractors_common",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/Akirakato1/Slay-the-Spire-2-Simulator"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
