[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "sts2_sim_py"
requires-python = ">=3.9"
version = "0.0.1"
description = "Python bindings for the Slay the Spire 2 Rust simulator."
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
# Build as a Python extension; the resulting .pyd/.so lands in the
# active virtualenv via `maturin develop`.
features = ["pyo3/extension-module"]
strip = true
