[package]
name = "sts2-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless simulator for Slay the Spire 2. Bit-exact translation of the MegaCrit decompile."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
