[package]
name = "extract-afflictions"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "extract-afflictions"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
extractors_common = { path = "../extractors_common" }
