[package]
name = "extract-enchantments"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "extract-enchantments"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = "1"
extractors_common = { path = "../extractors_common" }
