[package]
name = "extract-orbs"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "One-shot extractor: walks Models/Orbs and emits crates/sts2-sim/data/orbs.json."

[[bin]]
name = "extract-orbs"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = "1"
extractors_common = { path = "../extractors_common" }
