[package]
name = "extract-potions"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "extract-potions"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = "1"
extractors_common = { path = "../extractors_common" }
